# ai_agent

./: .gitignore  main.py  pyproject.toml
.temp/: guide.html  index.html
.trae/documents/: 使用 uv 安装项目依赖.md
app/agent/: e02381ad-7d2c-4374-9db9-cc60d7b39ec4.json  multi_chat.py
app/agent/model/: model.py
app/agent/prompts/: multi_chat_prompts.py
app/bailian/: bailian.py  bailian_agent.py  bailian_prompt.py  bailian_python_perl.py  bailian_qwq-plus.py  bailian_tools.py  bailian_tools2.py  common.py
app/code_agent/agent/: agent_chat.py  code_agent.py  model_chat.py
app/code_agent/mcp/: shell_tools.py
app/code_agent/tools/: file_saver.py  file_tools.py  shell_tools.py
app/code_agent/utils/: mcp.py
app/mcp/: amap_mcp_client.py
app/mcp/amap/: amap_mcp_client.py
app/mcp/stdio/: mcp_playwright_client.py  mcp_stdio_client.py  mcp_stdio_server.py
