[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27,<0.4.0",
    "langchain-core>=0.3.29,<0.4.0",
    "langchain-experimental>=0.3.4",
    "langchain-mcp-adapters==0.1.0",
    "langchain-openai>=0.3.35,<0.4.0",
    "langgraph>=0.2.28",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
